add mission statement and classes details

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       </div>
       <div>
         <div class="active">Home</div>
-        <div class="program">Hourly Painting Sessions</div>
-        <div class="program">After School Classes</div>
-        <div class="program">Weekly Art Classes</div>
-        <div class="program">Our Mission</div>
+        <div class="program" id="hourly-sessions-btn">2 Hour Painting Sessions</div>
+        <div class="program" id="after-school-classes-btn">After School Classes</div>
+        <div class="program" id="weekly-art-classes-btn">Weekly Art Classes</div>
+        <div class="program"><a href="#mission">Our Mission</a></div>
         <div class="program">Contact</div>
       </div>
     </nav>
 
     <div id="demo"></div>
     <div class="details" id="details-odd">
-      <div class="place-box">
+      <div class="type-box">
         <div class="text">Acrylic</div>
       </div>
       <div class="title-box-1"><div class="title-1">VIBRANT</div></div>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="details" id="details-even">
-      <div class="place-box">
+      <div class="type-box">
         <div class="text">Watercolor</div>
       </div>
       <div class="title-box-1"><div class="title-1">TRANSPARENT</div></div>
@@ -118,7 +118,12 @@
     </div>
 
     <div class="cover" ></div>
-   
+    <div class="mission-statement" id="mission-statement">
+      <h2>Our Mission</h2>
+      <p>At KB Musee, our mission is to cultivate a nurturing and inspiring environment where artists of all ages and skill levels can explore their creativity and develop their artistic talents. We are committed to offering a diverse range of art classes, from hourly sessions to after school programs and weekly courses, each designed to ignite passion and enhance skills in various artistic disciplines.</p>
+      <p>Our curriculum spans traditional and contemporary techniques, including painting, drawing, sculpture, mixed media, and digital art. Through hands-on instruction and collaborative projects, we aim to build a strong foundation in the arts while encouraging individual expression and innovation.</p>
+      <p>We believe in the transformative power of art and strive to provide an inclusive space where creativity flourishes. Our dedicated instructors are here to guide and inspire, helping each student discover their unique artistic voice and achieve their full potential. Whether in-person or online, KB Musee is dedicated to making art education accessible and engaging for everyone.</p>
+    </div>
 
    
   </body>
