--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div>KB Musee</div>
       </div>
       <div>
-        <div class="active">Home</div>
-        <div class="program" id="hourly-sessions-btn">2 Hour Painting Sessions</div>
-        <div class="program" id="after-school-classes-btn">After School Classes</div>
-        <div class="program" id="weekly-art-classes-btn">Weekly Art Classes</div>
-        <div class="program" id="mission-statement-btn">Our Mission</a></div>
+        <div class="active" id="default-btn">Home</div>
+        <div class="program" id="hourly-btn">2 Hour Painting Sessions</div>
+        <div class="program" id="after-school-btn">After School Classes</div>
+        <div class="program" id="weekly-btn">Weekly Art Classes</div>
+        <div class="program" id="mission-btn">Our Mission</a></div>
         <div class="program">Contact</div>
       </div>
     </nav>
