--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="program" id="after-school-btn">After School Classes</div>
         <div class="program" id="weekly-btn">Weekly Art Classes</div>
         <div class="program" id="mission-btn">Our Mission</a></div>
-        <div class="program">Contact</div>
+        <div class="program" id="contact-btn">Contact</div>
       </div>
     </nav>
 
@@ -51,7 +51,7 @@
             />
           </svg>
         </button>
-        <button class="discover">Learn more</button>
+        <button class="discover" id="learn-more-btn">Learn more</button>
       </div>
     </div>
     <div class="details" id="details-even">
@@ -77,7 +77,7 @@
             />
           </svg>
         </button>
-        <button class="discover">Learn more</button>
+        <button class="discover" id="learn-more-btn-2">Learn more</button>
       </div>
     </div>
     <div class="pagination" id="pagination">
@@ -118,7 +118,12 @@
     </div>
 
     <div class="cover" ></div>
-
+    <!-- Contact Us Section -->
+    <div id="contact-section" style="display:none;">
+      <h2>Contact Us</h2>
+      <p>Have any questions? Feel free to reach out to us!</p>
+      <p>Email: <a href="mailto:kbmusee@gmail.com">kbmusee@gmail.com</a></p>
+    </div>
    
   </body>
 <!-- partial -->
