--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
     hamburger.addEventListener('click', () => {
       navItems.classList.toggle('active');
+      hamburger.classList.toggle('rotate');
     });
   </script>
 </body>
