--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="keywords" content="KB Musee, art school, painting classes, acrylic, watercolor, ink wash painting, sumi-e, digital art, traditional Chinese painting, sketch, pastel, art lessons">
   <meta name="author" content="KB Musee">
   <link rel="stylesheet" href="./style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 <!-- partial:index.partial.html -->
