--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="KB Musee offers a variety of art classes, including hourly painting sessions, after school classes, and weekly art classes. Explore different art forms like acrylic, watercolor, ink wash painting, sumi-e, digital art, traditional Chinese realistic painting, sketch, and pastel. Join us to unleash your creativity.">
   <meta name="keywords" content="KB Musee, art school, painting classes, acrylic, watercolor, ink wash painting, sumi-e, digital art, traditional Chinese painting, sketch, pastel, art lessons">
   <meta name="author" content="KB Musee">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
