--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="program" id="hourly-btn">2 Hour Painting Sessions</div>
         <div class="program" id="after-school-btn">After School Classes</div>
         <div class="program" id="weekly-btn">Weekly Art Classes</div>
+        <div class="program" id="student-btn">Student works</div>
         <div class="program" id="mission-btn">Our Mission</a></div>
         <div class="program" id="contact-btn">Contact</div>
       </div>
