update contact us

--- a/index.html
+++ b/index.html
@@ -133,8 +133,14 @@
       <h2>Contact Us</h2>
       <p>Have any questions? Feel free to reach out to us!</p>
       <p>Email: <a href="mailto:kbmusee@gmail.com">kbmusee@gmail.com</a></p>
+      <p>Follow us on Facebook:</p>
+      <a href="https://www.facebook.com/coyoteke.draw.with.me" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M22.675 0h-21.35c-.733 0-1.325.592-1.325 1.325v21.351c0 .733.592 1.324 1.325 1.324h11.497v-9.294h-3.131v-3.622h3.131v-2.672c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.794.143v3.239l-1.917.001c-1.504 0-1.794.715-1.794 1.763v2.313h3.588l-.467 3.622h-3.121v9.294h6.116c.733 0 1.325-.591 1.325-1.324v-21.351c0-.733-.592-1.325-1.325-1.325z"/>
+        </svg>
+      </a>
     </div>
-   
+  
   </body>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js'></script><script  src="./script.js"></script>
