--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
     <!-- Contact Us Section -->
     <div id="contact-section" style="display:none;">
       <h2>Contact Us</h2>
+      <form action="https://formspree.io/f/meojorvq" method="POST" class="contact-form">
+        <label for="email">Your email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Your message:</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
       <p>Have any questions? Feel free to reach out to us!</p>
       <p>Email: <a href="mailto:kbmusee@gmail.com">kbmusee@gmail.com</a></p>
       <p>Follow us on Facebook:</p>
