--- a/index.html
+++ b/index.html
@@ -130,15 +130,24 @@
     <div class="cover" ></div>
     <!-- Contact Us Section -->
     <div id="contact-section" style="display:none;">
-      <h2>Contact Us</h2>
+       <div class="title">
+        <h1>contact us</h1>
+      </div>
       <form action="https://formspree.io/f/meojorvq" method="POST" class="contact-form">
-        <label for="email">Your email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Your message:</label>
-        <textarea id="message" name="message" required></textarea>
-
-        <button type="submit">Send</button>
+       <div class="contact-wrapper">
+        <div class="contact-form">
+        <div class="input-fields">
+          <input type="text" class="input" placeholder="Name">
+          <input type="text" class="input" placeholder="Email Address">
+          <input type="text" class="input" placeholder="Phone">
+          <input type="text" class="input" placeholder="Subject">
+        </div>
+          <div class="msg">
+          <textarea placeholder="Message"></textarea>
+          <div class="btn">send</div>
+        </div>
+      </div>
+    </div>
       </form>
       <p>Have any questions? Feel free to reach out to us!</p>
       <p>Email: <a href="mailto:kbmusee@gmail.com">kbmusee@gmail.com</a></p>
