--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
        <div class="title">
         <h1>contact us</h1>
       </div>
-      <form action="https://formspree.io/f/meojorvq" method="POST" class="contact-form">
+      <form action="https://formspree.io/f/meojorvq" method="POST" class="contact-form"  id="contact-form">
        <div class="contact-wrapper">
         <div class="contact-form">
         <div class="input-fields">
@@ -144,7 +144,8 @@
         </div>
           <div class="msg">
           <textarea placeholder="Message"></textarea>
-          <div class="btn">send</div>
+          <div class="btn"><button type="submit">send</button></div>
+          <p id="contact-form-status"></p>
         </div>
       </div>
         <div id="info">
