contact us ajax

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
        <div class="contact-wrapper">
         <div class="contact-form">
         <div class="input-fields">
-          <input type="text" class="input" placeholder="Name">
-          <input type="text" class="input" placeholder="Email Address">
-          <input type="text" class="input" placeholder="Phone">
-          <input type="text" class="input" placeholder="Subject">
+          <input type="text" class="input" placeholder="Name" name="name" required="">
+          <input type="text" class="input" placeholder="Email Address" name="email" required="">
+          <input type="text" class="input" placeholder="Phone" name="phone">
+          <input type="text" class="input" placeholder="Subject" name="subject">
         </div>
           <div class="msg">
-          <textarea placeholder="Message"></textarea>
+          <textarea placeholder="Message" name="message"></textarea>
           <div class="btn"><button type="submit">send</button></div>
           <p id="contact-form-status"></p>
         </div>
